--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,33 @@
-.App {
-  text-align: center;
+.top-bar {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.top-bar input {
+  font-size: 1em;
+  border-radius: 20px;
+  padding: 10px;
+  width: 40%;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.repo-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.App-title {
-  font-size: 1.5em;
+.repo-card {
+  width: 20%;
+  background-color: ghostwhite;
+  margin: 5px;
+  padding: 0 5px;
+  overflow: hidden;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@media (max-width: 699px) {
+  .repo-card {
+    width: 40%;
+  }
 }
